tests/neg-macros/newClassExtendsOnlyTrait/Test_2.scala
def test: Foo = makeClass("foo") // error
